[gd_scene load_steps=4 format=2]

[ext_resource path="res://ArmaBase.gd" type="Script" id=1]
[ext_resource path="res://art/red_cannon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 5 )

[node name="ArmaBase" type="Node2D"]
script = ExtResource( 1 )
alcance = 50.0

[node name="DirecaoProjetil" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="FimDaArma" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="IntervaloTiro" type="Timer" parent="."]
one_shot = true

[node name="TempoRecarga" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["area_arma"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="IntervaloTiro" to="." method="_on_IntervaloTiro_timeout"]
[connection signal="timeout" from="TempoRecarga" to="." method="_on_TempoRecarga_timeout"]
